fix(b dialog): fixed scroll behind b dialog, fixed buttons footer container

--- a/scss/utils/_helpers.scss
+++ b/scss/utils/_helpers.scss
@@ -32,6 +32,14 @@
     flex-grow: 0;
 }
 
+.flex-shrink-1 {
+    flex-shrink: 1;
+}
+
+.flex-shrink-0 {
+    flex-shrink: 0;
+}
+
 .align-start {
     align-items: flex-start;
 }
